<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="signin_with_phone_number">SIGNIN WITH PHONENUMBER</string>
    <string name="signin_with_google">SIGNIN WITH GOOGLE</string>
    <string name="signin_with_email">SIGNIN WITH EMAIL</string>
    <string name="button_getotp">Get OTP</string>
    <string name="button_verify">Verify</string>
    <string name="enter_number">Enter your 10 digit Mobile Number</string>
    <string name="enter_otp">Check sms for OTP</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="action_logout">Log Out</string>
    <string name="button_save">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
</resources>
